# nemesisdb

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  docker_build.sh  ideas.md  prepare_build_env.md  prepare_vcpkg.sh  prepare_vcpkg_run_install.sh  release_proc.md
apis/python/: README.md  connection.py  ndb.py
apis/python/examples/: arrays.py  common.py  connect.py  kv_fb.py  kv_proto.py  lists.py  sessions_otp.py  sessions_simple.py  sessions_users.py  setget.py  user_email.py
apis/python/ndb/: __init__.py  arrays.py  client.py  commands.py  common.py  connection.py  kv.py  kvclient.py  lists.py  logging.py  ndb.py  sessionclient.py  sv.py
apis/python/ndb/proto/: set_pb2.py
apis/python/tests/: kv.py  session.py
articles/002 - 1vcpu/: setup.drawio
articles/003 - keysets/: keyset.drawio
clientapi/src/fusion/client/: client.hpp
clients/: CMakeLists.txt  README.md  kv.cpp  kvclient.cpp
clients/configs/: local.json  server4.json
clients/utils/: Client.hpp  HandlerWebSocketServer.h  WebSocketServer.h
core/: CMakeLists.txt  CacheMap.h  CacheMap2.h  FusionCommon.h  FusionConfig.h  LogFormatter.h  NemesisCommon.h  NemesisConfig.h  Persistance.h  Server.h
core/arr/: ArrArray.h  ArrCommandValidate.h  ArrCommands.h  ArrCommon.h  ArrExecutor.h  ArrHandler.h
core/fbs/: common_generated.h  kv_request_generated.h  kv_response_generated.h
core/ks/: KsCommon.h  KsHandler.h  KsSets.h
core/kv/: CacheMap.h  KvCommandValidate.h  KvCommands.h  KvCommon.h  KvExecutor.h  KvHandler.h  KvHandler2.h  KvPool.h  KvPoolWorker.h  KvServer.h  KvSessionExecutor.h  KvSessions.h  ShCommands.h  ShExecutor.h  ShHandler.h
core/lst/: LstCommandValidate.h  LstCommands.h  LstCommon.h  LstExecutor.h  LstHandler.h  LstList.h
core/proto/: set.pb.cc  set.pb.h
core/sh/: KvSessions.h  ShCommandValidate.h  ShCommands.h  ShCommon.h  ShExecutor.h  ShHandler.h  ShSessions.h
core/sv/: SvCommands.h
core/ts/: IndexSearchResult.h  OrderedSeries.h  Series.h  TsCommon.h  TsHandler.h  TsServer.h
docker/: Dockerfile.alpine
docs/: docusaurus.config.js  package-lock.json  package.json  sidebars.js
docs/docs/: intro.md
docs/docs/api/: Overview.md  Statuses.md  TS-Statuses.md
docs/docs/api/kv/: .kv-append.md  _category_.json  _kv-setq.md  kv-add.md  kv-addq.md  kv-append.md  kv-arr-append.md  kv-clear-set.md  kv-clear.md  kv-contains.md  kv-count.md  kv-find.md  kv-get.md  kv-keys.md  kv-load.md  kv-rmv.md  kv-save.md  kv-set.md  kv-setq.md  kv-update.md
docs/docs/api/sessions/: _category_.json  sh-clear.md  sh-end-all.md  sh-end.md  sh-exists.md  sh-info-all.md  sh-info.md  sh-keys.md  sh-load.md  sh-new.md  sh-open.md  sh-save.md
docs/docs/api/ts/: _category_.json  ts-add-evt.md  ts-create-index.md  ts-create-series.md  ts-delete.md  ts-get-multi.md  ts-get.md
docs/docs/client_apis/: Overview.md
docs/docs/client_apis/python/: Add.md  Clear.md  Clear_Set.md  Contains.md  Count.md  Get.md  Keys.md  Load.md  Overview.md  Rmv.md  Save.md  Set.md  _category_.json
docs/docs/client_apis/python/arr/: _category_.json  capacity.md  clear.md  create.md  delete.md  delete_all.md  exist.md  get.md  get_rng.md  intersect.md  max.md  min.md  overview.md  set.md  set_rng.md  swap.md  used.md
docs/docs/client_apis/python/kv/: Add.md  (+13 more)
docs/docs/home/: apis.md  client-apis.md  clients.md  config.md  install.md  keyvalues.md  persist.md  run.md  tldr-kv.md  tldr-ts.md  tldr.md
docs/docs/home/install/: _category_.json  docker.md  package.md
docs/docs/tutorials/first-steps/: _category_.json  new-session.md  setandget.md  setup.md
docs/docs/tutorials/first-steps-kv/: _category_.json  setandget.md  setup.md
docs/docs/tutorials/persist-data/: _category_.json  configure.md  overview.md
docs/docs/tutorials/persist-data-kv/: _category_.json  configure.md  overview.md
docs/docs/tutorials/sessions/: _category_.json  create-session.md  end-session.md  shared-sessions.md  what-is-a-session.md
docs/src/css/: custom.css
faff/: CMakeLists.txt  jsoncons.cpp
fbs/: common.fbs  gen.sh  kv_request.fbs  kv_response.fbs
package/: create.sh
package/staging/fusioncache_0.2.0_amd64/DEBIAN/: control
performance/: 1vcpu_results.ods
proto/: set.proto
server/: CMakeLists.txt  server.cpp
server/configs/: config.json  default.json  default.jsonc  default_sessions.jsonc  docker_default.json  docker_default.jsonc
test/: CMakeLists.txt  Get.cpp  Set.cpp  run_all_tests.sh
test/src/: Add.cpp  AddQ.cpp  Append.cpp  ArrayMove.cpp  CMakeLists.txt  Clear.cpp  ClearSet.cpp  Contains.cpp  Count.cpp  Find.cpp  Get.cpp  KeySets.cpp  Keys.cpp  Load.cpp  Remove.cpp  Rename.cpp  Save.cpp  ServerInfo.cpp  Sessions.cpp  Set.cpp  SetQ.cpp  Update.cpp
test/src/ts/: CMakeLists.txt  Filter.cpp  Indexes.cpp  MoreData.cpp  OrderedSeries.cpp  Series.cpp
test/src/useful/: TestCommon.h  TsSeriesTest.h
test/test_data/: moredata_10k.json
test/useful/: TestCommon.h
tests/: base.py  common.py  run_arr.sh  run_kv.sh  run_lst.sh  run_sessions.sh  run_sv.sh  server.jsonc  test_count.py  test_keys.py  useful.sh
tests/arr/: test_clear.py  test_create_set_get.py  test_exist.py  test_get_range.py  test_set_range.py  test_swap.py
tests/iarr/: READMME.md  test_create_set_get.py
tests/kv/: common.py  test_add.py  test_clear.py  test_clear_set.py  test_contains.py  test_count.py  test_keys.py  test_remove.py  test_save_load.py  test_set_get.py
tests/oarr/: test_clear.py  test_create_set_get.py  test_exist.py  test_get_range.py  test_set_range.py  test_swap.py
tests/olst/: test_add.py  test_exist_delete.py  test_get.py  test_len.py  test_remove.py  test_setrng.py  test_splice.py
tests/sessions/: common.py  test_end_all.py  test_exists.py  test_info.py  test_new_end.py  test_save_load.py  test_set_get.py
tests/sorted_iarr/: test_clear.py  test_create_set_get.py  test_intersect.py  test_min_max.py
tests/sorted_strarr/: test_create_set_get.py
tests/strarr/: test_create_set_get.py
tests/sv/: test_server_info.py  test_server_info_kv.py  test_server_info_sessions.py
useful/: azure_ips.txt  client_connect.sh
(+80 files in other folders)
